--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,9 +12,9 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}">
+    <link rel="stylesheet" href="/sttaic/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <script src="{{ url_for('static', path='app.js') }}" defer></script>
+    <script src="/sttaic/app.js" defer></script>
 </head>
 <body>
   
