--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,19 +17,77 @@
     <script src="/static/app.js" defer></script>
 </head>
 <body>
-  
-  <div class=" container-fluid drag-area">
-    <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
-    <header>Drag & Drop to Upload File</header>
-    <span>OR</span>
-    <button>Browse File</button>
-    <input type="file" hidden>
-   
+
+  <div class="container">
+    <div class="row">
+      <div class="col d-flex justify-content-center">
+        <div class="drag-area">
+          <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
+          <header>Drag & Drop to Upload File</header>
+          <span>OR</span>
+          <button>Browse File</button>
+          <input type="file" hidden>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col d-flex justify-content-center">
+        <button class="glow-on-hover send" type="button">Extract Text</button>
+      </div>
+      <div class="col d-flex justify-content-center">
+        <button class="glow-on-hover send" type="button">download as .txt file</button>
+      </div>
+    </div>
+
+    <div class="row">
+    </div>
+
+    <div class="row">
+      <div class="col">
+
+      </div>
+    </div>
+    <div
+      tabindex="-1"
+      aria-labelledby="modal-project-1"
+      aria-hidden="true"
+      class="modal fade"
+      id="myModal"
+    >
+      <div class="modal-dialog modal-xl modal-dialog-centered" id="myModal">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5
+              class="modal-title section-title item text-center"
+              id="staticBackdropLabel"
+            >
+              Extracted text
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body" id="responseText">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
   </div>
-  <div>
-    <button class="glow-on-hover send" type="button">Extract Text</button>
-    <button class="glow-on-hover send" type="button">download your TEXT</button>
-  </div>
+
+
+<!-- Modal -->
+
+
+
+
      <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
