--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag & Drop or Browse: File Upload | CodingNepal</title>
+    <title>ms fastAPI extract text with tesseract</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
       <div class="col d-flex justify-content-center">
         <div class="drag-area">
           <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
-          <header>Drag & Drop to Upload File</header>
+          <header class="text-justify">Drag & Drop to Upload File</header>
           <span>OR</span>
           <button>Browse File</button>
           <input type="file" hidden>
